Fix line breaking in nav bar
Safari and Chrome don't support zero-width space (WTF)
so I'm biting the bullet and inserting spaces instead.
Fortunately, it doesn't look terrible.

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ button.link { display: inline; padding: 0; margin: 0; border: none; background: 
 #masthead h1 { font-size: 150%; margin: 0; }
 #masthead ul.nav { margin: 0.5em 0; padding: 0; display: block; }
 #masthead ul.nav li { margin: 0 0.5em; padding: 0; display: inline; line-height: 1.5em; }
-#masthead ul.nav li:after { content: "\200B"; }
 #masthead ul.nav a { white-space: nowrap; }
 #footer { margin-top: 3em; text-align: center; color: #777; font-size: 85%; }
 #footer p { margin: 0; }
